-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.773 2010-07-26 22:36:46 guru Exp $
-----------------------------------------------------------------------------------------

2010-07-26	pwessel
	* mgd77/mgd77manage.c:	The -F option had no break statement.
	* mgd77/mgd77track.c:	Had inactive code to write segmentheader to output.

2010-07-24	pwessel
	* mgd77/mgd77list.c:	The -G option was not listed in synopsis or usage, only
				in the man pages.  Also -Fall+ and -Fmgd77+ did not append
				the auxiliary columns properly.

2010-07-22	pwessel
	* psimage.c:		justify text string must be 3-char longs to hold trailing 0.

2010-07-18	remko
	* pstext.txt:		Added missing description of -A option.
	* configure.ac:		Updated to 4.5.4

2010-07-16	pwessel
	* ex23/*:		The scripts plotted names at a 1-degree angle instead of 0.

2010-07-16	pwessel
	* spotter/*.c:		Now convert geodetic to geocentric latitudes before doing
				spherical rotations; recover geodetic for output points.

-----------------------------------------------------------------------------------------
2010-07-15	pwessel
	* GMT 4.5.3 finalized and released
-----------------------------------------------------------------------------------------

2010-07-14	remko
	* GMT_nighttime.cpt:	Colortable for DMSP-OLS Nighttime Lights Time Series
				Designed by Andreas Trawoeger.

2010-07-13	pwessel
	* gmt_plot.c:		Ensure that axis vector for GRAPH mode matches axis pen width.

2010-07-13	remko
	* gmt_plot.c, gmt_map.c:	Replace GMT_coordinate_to_[xy] by already existing
				GMT_x_to_xx and GMT_y_to_yy.

2010-07-08	pwessel
	* ex13:			Used -G2i/10 which is a syntax from pre-GMT 4.  Changed to -Gd2i.
	* explain_contlabel.txt: Did not fully describe the -Gd label option, including the
				fractional part.
	* gmt_support.c:	Now complains if -Gd<dist>[/<frac>] finds frac outside 0-1.

2010-07-05	jluis